--- a/src/ui/layer_list_panel.css
+++ b/src/ui/layer_list_panel.css
@@ -59,7 +59,7 @@
   width: 10px;
 }
 
-.neuroglancer-layer-list-panel-rainbow-color-value {
+.neuroglancer-layer-list-panel-color-value.rainbow {
   position: relative;
   border-radius: 50%;
   height: 10px;
@@ -67,7 +67,7 @@
   overflow: hidden;
 }
 
-.neuroglancer-layer-list-panel-rainbow-color-value::before {
+.neuroglancer-layer-list-panel-color-value.rainbow::before {
   content: '';
   position: absolute;
   top: -17.5%;
@@ -80,7 +80,7 @@
 }
 
 .neuroglancer-layer-list-panel-color-value-wrapper.cross .neuroglancer-layer-list-panel-color-value,
-.neuroglancer-layer-list-panel-color-value-wrapper.cross .neuroglancer-layer-list-panel-rainbow-color-value::before {
+.neuroglancer-layer-list-panel-color-value-wrapper.cross .neuroglancer-layer-list-panel-color-value.rainbow::before {
   opacity: 0.4;
 }
 
